RoverCode/ros2_ws/log/build_2025-04-08_19-09-48/motor_controller/stderr.log
  File "/home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller/motor_node.py", line 33
    elif command == 'MEDIUM_SPEED'
                                  ^
SyntaxError: expected ':'

